--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "gulp": "^4.0.2",
+    "gulp-pug": "^5.0.0",
+    "gulp-uglify": "^3.0.2",
     "path": "^0.12.7",
     "pug": "^3.0.2"
   }
